--- a/src/lozadagroupcompany/FrameUnit.form
+++ b/src/lozadagroupcompany/FrameUnit.form
@@ -203,7 +203,7 @@
     <Component class="javax.swing.JButton" name="jButton2">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="83" green="73" red="6b" type="rgb"/>
+          <Color blue="42" green="34" red="2d" type="rgb"/>
         </Property>
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="ff" green="ff" red="ff" type="rgb"/>
